# smcr-staff-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  GEMINI.md  LICENSE  Makefile  PRODUCT.md  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  setup-check.bat  setup-check.sh  start.bat  start.sh
.claude/: launch.json
.gemini/: styleguide.md
.github/: copilot-instructions.md
app/: __init__.py  main.py  startup_preflight.py
chatgpt_app/: README.md  main.py  requirements.txt
docker/: entrypoint.sh
docs/: API_REFERENCE.md  HOW_TO_USE.md  README.md  agent_design.md  architecture.md  chatgpt_app_scaffold.md  chatgpt_app_surface.md  chatgpt_repo_mode.md  contributing-agents.md  dashboard_operating_model.md  data_governance.md  docker_local.md  doctrine-reference.md  doctrine_sources.md  echelon-guide.md  external_ai_safe_use.md  how_to_use_with_chatgpt.md  improvement-backlog.md  interagency_reference.md  media_capability_intake.md  offline_notes.example.md  offline_notes.md  optional_legacy_surfaces.md  roadmap.md  staff_operating_model.md  training_media_enablement.md  usmc_history_context.md
modules/: README.md
prompt-packs/: README.md  general-marine.md  getting-started.md  reserve-admin.md  staff-products.md  training-ops.md
scripts/: _smcr_launch_lib.py  create_desktop_shortcut.ps1  generate_app_icon.py  generate_system_templates.py  launch_dashboard.pyw  patch_dashboard_bundle.py  start-chatgpt-app.cmd  start-chatgpt-app.ps1  (+7 more)
(+719 files in other folders)
